RESOLVED FIXED171163
[ATK] Elements with a defined, non-false value for aria-current should expose ATK_STATE_ACTIVE
https://bugs.webkit.org/show_bug.cgi?id=171163
Summary [ATK] Elements with a defined, non-false value for aria-current should expose...
Joanmarie Diggs
Reported 2017-04-22 10:19:57 PDT
Steps to reproduce: 1. Load data:text/html,<div role="link" aria-current="page">1</div> 2. Use Accerciser to examine the element Expected results: the element would be exposed with STATE_ACTIVE Actual results: the element is not exposed with STATE_ACTIVE https://rawgit.com/w3c/aria/master/core-aam/core-aam.html#ariaCurrent Also: In addition to exposing STATE_ACTIVE, when the value of aria-current changes from non-false to false or from false to non-false, an object:state-changed:active event should also be fired.
Attachments
Patch (18.29 KB, patch)
2017-04-26 14:46 PDT, Joanmarie Diggs
no flags
Radar WebKit Bug Importer
Comment 1 2017-04-22 10:20:14 PDT
Joanmarie Diggs
Comment 2 2017-04-22 10:34:39 PDT
Also, the value of aria-current should be exposed via "current" object attribute.
Joanmarie Diggs
Comment 3 2017-04-26 14:46:48 PDT
WebKit Commit Bot
Comment 4 2017-04-26 16:26:52 PDT
Comment on attachment 308285 [details] Patch Clearing flags on attachment: 308285 Committed r215837: <http://trac.webkit.org/changeset/215837>
WebKit Commit Bot
Comment 5 2017-04-26 16:26:54 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.