[ATK] Elements with a defined, non-false value for aria-current should expose ATK_STATE_ACTIVE https://bugs.webkit.org/show_bug.cgi?id=171163

Reviewed by Chris Fleizach.

Source/WebCore:

Add ATK_STATE_ACTIVE to the state set of elements which have a valid, non-false
value for aria-current, expose the value of via the "current" AtkObject attribute,
and emit state-change notifications when the value of aria-current changes from
non-false to false, or vice versa.

Tests: accessibility/gtk/aria-current-changed-notification.html
       accessibility/gtk/aria-current.html

* accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::handleAttributeChanged):
* accessibility/AXObjectCache.h:
* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::supportsARIACurrent):
(WebCore::AccessibilityObject::ariaCurrentValue):
* accessibility/AccessibilityObject.h:
* accessibility/atk/AXObjectCacheAtk.cpp:
(WebCore::AXObjectCache::postPlatformNotification):
* accessibility/atk/WebKitAccessibleWrapperAtk.cpp:
(webkitAccessibleGetAttributes):
(setAtkStateSetFromCoreObject):
* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper accessibilityAttributeValue:]): Moved code returning
string value for aria-current into AccessibilityObject:ariaCurrentValue().

Tools:

Add support for state-change notifications for ATK_STATE_ACTIVE.

* WebKitTestRunner/InjectedBundle/atk/AccessibilityNotificationHandlerAtk.cpp:

LayoutTests:

* accessibility/gtk/aria-current-changed-notification-expected.txt: Added.
* accessibility/gtk/aria-current-changed-notification.html: Added.
* accessibility/gtk/aria-current-expected.txt: Added.
* accessibility/gtk/aria-current.html: Added.


Canonical link: https://commits.webkit.org/188234@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215837 268f45cc-cd09-0410-ab3c-d52691b4dbfc