Source/WebCore/accessibility/AccessibilityObject.h
@@ -656,6 +656,8 @@ public:
     void classList(Vector<String>&) const;
     virtual String roleDescription() const;
     AccessibilityARIACurrentState ariaCurrentState() const;
+    String ariaCurrentValue() const;
+    bool supportsARIACurrent() const;
     
     // This function checks if the object should be ignored when there's a modal dialog displayed.
     bool ignoredFromARIAModalPresence() const;
